--- a/SocketIO_project_rooms/public/index.html
+++ b/SocketIO_project_rooms/public/index.html
@@ -44,6 +44,14 @@
         $('#m').val('');
         return false;
       });
+
+      socket.on('connect', () => {
+        // emiting to everybody
+
+        socket.emit('message', 'user connected');
+
+      })
+
       socket.on('message', (msg) => {
         $("#messages").append($('<li>').text(msg));
       })
